--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,7 @@
 {
   "accentColor": "",
   "theme": "obsidian",
-  "cssTheme": ""
+  "cssTheme": "Sodalite",
+  "interfaceFontFamily": "Comic Sans MS",
+  "textFontFamily": "Bookman Old Style,Arial Black"
 }
